yanl/examples/t1/fail/functie_standard.yanl
# writeString trebuie apelat cu exact un parametru

program dude;
begin
	writestring("ok");
	writestring("not", "ok");
end.